[package]
name = "rust-gcp"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
apache-avro = "0.17.0"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
base64 = "0.22.1"
cbc = "0.1.2"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
config = "0.15.11"
deadpool-redis = "0.20.0"
erased-serde = "0.4.6"
google-cloud-gax = "0.19.2"
google-cloud-googleapis = "0.16.1"
google-cloud-pubsub = "0.30.0"
google-cloud-secretmanager-v1 = "0.4.0"
google-cloud-storage = "0.24.0"
google-datastore1 = "6.0.0"
http = "1.3.1"
once_cell = "1.21.3"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"
serde_json = "1.0.140"
sha2 = "0.10.9"
smart-default = "0.7.1"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tonic = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
dev = []
